--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -78,12 +78,11 @@
     padding: 22px 24px;
     text-decoration: none;
     color: inherit;
-    font-size: 18px;
-    font-weight: 500;
   }
 
   @media screen and (min-width: $tablet-width) {
-    padding-bottom: 10px;
+    padding: 22px 0 10px;
+
 
     &--current {
       @include navigation-border;
